# html2docx-converter

./: .gitignore  README.md  pyproject.toml  run_test.py
htmldocx/: h2d.py
tests/: run_test.py  test.ipynb  test_advanced_features.py  test_features.py
